# cuda-raytracer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CudaRaytrace.sln  LICENSE  README.md  TODO.md
.github/workflows/: build.yml
CudaRaytrace/: Camera.h  CudaRaytrace.vcxproj  CudaRaytrace.vcxproj.filters  FrameBuffer.h  Hittable.h  Material.h  Quad.cpp  Quad.h  Ray.h  RaytracerKernel.cu  RaytracerKernel.h  Shader.h  Sphere.h  Window.cpp  Window.h  World.h  cuda_errors.cpp  glad.c  input.cpp  input.h  kernel.cu  main.cpp
CudaRaytrace/shaders/: rendertype_accumulate.fsh  rendertype_accumulate.vsh
include/glad/: glad.h
src/: Input.cpp  Input.h  Quad.cpp  Quad.h  Shader.h  Window.cpp  Window.h  cuda_errors.cpp  cuda_errors.h  main.cpp
src/raytracer/: AABB.h  BVHNode.h  Camera.h  FrameBuffer.h  Hittable.h  Material.h  Sphere.h  Texture.h  World.h  kernel.cu  kernel.h
src/shaders/: rendertype_accumulate.frag  rendertype_screen.vert
